<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="168dp"
        android:layout_height="102dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144"
        app:srcCompat="@drawable/login" />

    <EditText
        android:id="@+id/LoginEmail"
        style="@android:style/Widget.DeviceDefault.Light.EditText"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:ems="10"
        android:hint="@string/enail_addresss"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHighlight="#7CB342"
        android:textColorLink="#7CB342"
        android:textCursorDrawable="@drawable/reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <EditText
        android:id="@+id/LoginPassword"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="259dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#5D5C5E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <Button
        android:id="@+id/login"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:background="@drawable/loginbuttons"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <Button
        android:id="@+id/register"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:background="@drawable/reg"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="166dp"
        android:layout_height="18dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />
</androidx.constraintlayout.widget.ConstraintLayout>