<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/wall2"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:textColorHint="@android:color/white"
        android:id="@+id/TxtName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="242dp"
        android:layout_height="47dp"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:drawableBottom="@drawable/email"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
        android:id="@+id/TxtEmail"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <EditText
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_vpn2_key_black_24dp"
        android:id="@+id/TxtPassword"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <EditText
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_vpn2_key_black_24dp"
        android:id="@+id/TxtConfirm"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:background="@drawable/regbutton"
        android:text="@string/submit"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="119dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115"
        app:srcCompat="@drawable/registericon" />
</androidx.constraintlayout.widget.ConstraintLayout>